# mcr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/mcr-core/: Cargo.toml
crates/mcr-core/src/: diff.rs  hunk.rs  lib.rs  ops.rs  session.rs  wire.rs
crates/mcr-core/tests/: alignment.rs  apply_revert_roundtrip.rs  ops_proptest.rs  word_diff.rs
crates/mcr-session/: Cargo.toml
crates/mcr-session/src/: discovery.rs  lib.rs  manager.rs
scripts/: install.sh  test-scenarios.sh  vendor-neutral-check.sh
specs/001-three-pane-merge-editor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-three-pane-merge-editor/checklists/: requirements.md
specs/002-multi-file-merge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  discovery.rs  lib.rs  main.rs  manager.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: demo.ts  main.ts  styles.css
ui/tests/: boot_flow.test.ts  decorations.test.ts  delta.test.ts  exit_modal.test.ts  files_list.test.ts  panes.test.ts  scroll_connectors.test.ts  scroll_sync.test.ts  theme_settings.test.ts
(+25 files in other folders)
