[workspace]

[package]
name = "mcr-app"
version = "0.3.0"
edition = "2021"
description = "MCR three-pane merge editor (Tauri shell)"

[lib]
name = "mcr_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mcr-core = { path = "../crates/mcr-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
