[package]
name = "mcr-session"
version = "0.1.0"
edition = "2021"
description = "Framework-agnostic multi-file merge/compare session store and git discovery for MCR"

[dependencies]
mcr-core = { path = "../mcr-core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
